k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"dapo-app-image"},"fieldPath":"spec.template.spec.containers[?(@.name==\"dapo-app-image\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: dapo-reference-cd-pipeline
    app.kubernetes.io/component: dapo-reference-cd-pipeline
    app.kubernetes.io/instance: dapo-reference-cd-pipeline
  name: dapo-reference-cd-pipeline
  namespace: dapo-reference-pipeline
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: dapo-reference-cd-pipeline
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: dapo-reference-cd-pipeline
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/dapo-reference-pipeline/dapo-app-image
        imagePullPolicy: Always
        name: dapo-reference-cd-pipeline
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
